- update hesiod module (Jeff Moyer).
  - add mutex to protect against overlapping mount requests.
  - update return from mount request to give more sensible NSS_*
    values.
- fix handling of autofs filesystem mount fail on init.
- add back test test for nested mount in program map lookup.
  - I must have commented this out for a reason. I guess we'll
    find out soon enough.
- fix "-hosts" map inot finding entry for the "nobrowse" case.

23/5/2006 autofs-5.0.0_beta3
----------------------------
- add config and compile time info to output of -V.
- add "-Dvar=value" comand line option to define global
  macro definitions.
- remove "nofg" and "bg" options as they aren't relevant for
  autofs.
- fix handling of numeric ip address strings in name translation.
- fix error handling for gethostbyname_r.
- change option processing to be inline with standard automount
  option processing. ie. mount entry options override global
  mount options.
- replicated server selection re-write.

9/5/2006 autofs-5.0.0_beta2
---------------------------
- re-organize functions for direct mount and expire to eliminate
  pthread compile error.
- reap return code from child at startup.
- add check for self inclusion when including maps.
- add plus map inclusion depth limit.
- fix logic to check if map update is needed.
- fix shutdown wait for submounts again (and again ...).
- add check for filesystem autofs in /proc/filesystems in case
  it's complied in the kernel.
- update Gentoo ebuild.
- updated man pages based on feedback from Jeff Moyer.

1/5/2006 autofs-5.0.0_beta1
---------------------------
- Initial update.
  - direct mounts.
  - lazy multi-mounts.
  - added kernel module to source tree.
- merged depricated LDAP patch.
- merged configurable locking patch.
- implemented nsswitch lookup for client maps.
- sync kernel module source.
- more kernel module fixes.
- redo mapenty cache locking and start work on
  background map refresh.