@@ -171,7 +171,17 @@ Maps are browsable by default (program default "yes").
 .TP
 .B DEFAULT_LOGGING
 set default log level "none", "verbose" or "debug" (program default "none").
->>>>>>> origin
+.SH BUILTIN MAP -hosts
+If "-hosts" is given as the map then accessing a key under the mount point
+which corresponds to a hostname will allow access to the exports of that
+host.
+.P
+For example, with an entry in the master map of
+.nh
+.B /net  -hosts
+.hy
+accessing /net/myserver will mount exports from myserver on directories below
+/net/myserver.
 .SH LDAP MAPS
 If the map type \fBldap\fP is specified the mapname is of the form
 \fB[//servername/]dn\fP, where the optional \fBservername\fP is
